--- a/BabiLagoon.API/BabiLagoon.API.csproj
+++ b/BabiLagoon.API/BabiLagoon.API.csproj
@@ -19,4 +19,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BabiLagoon.Infrastructure\BabiLagoon.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
