--- a/BabiLagoon.Infrastructure/BabiLagoon.Infrastructure.csproj
+++ b/BabiLagoon.Infrastructure/BabiLagoon.Infrastructure.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BabiLagoon.Domain\BabiLagoon.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
